force-app/main/default/objects/Task_Update_Event__e/Task_Update_Event__e.object-meta.xml
<CustomObject>
    <label>Task Update Event</label>
    <pluralLabel>Task Update Events</pluralLabel>
</CustomObject>