force-app/main/default/objects/Task_Update_Event__e/fields/New_Column__c.field-meta.xml
<CustomField>
    <fullName>New_Column__c</fullName>
    <label>New Column</label>
    <length>50</length>
    <type>Text</type>
</CustomField>