force-app/main/default/objects/Task_Update_Event__e/fields/Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Updated_By__c</fullName>
    <label>Updated By</label>
    <length>18</length>
    <type>Text</type>
</CustomField>